Added project version to backend-conf container: backend settings are very much version dependent

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -424,6 +424,7 @@
                 <maintainer>timo.tiuraniemi@iki.fi</maintainer>
                 <tags>
                   <tag>latest</tag>
+                  <tag>${project.version}</tag>
                 </tags>
                 <assembly>
                   <mode>dir</mode>
