--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -91,7 +91,7 @@
     <dependency>
       <groupId>org.extendedmind</groupId>
       <artifactId>neo4j-scala</artifactId>
-      <version>${neo4j.version}</version>
+      <version>${neo4j.version}.1</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
