--- a/backend/src/main/docker/neo4j.properties.toml
+++ b/backend/src/main/docker/neo4j.properties.toml
@@ -3,5 +3,5 @@ src = "../templates/backend/neo4j.properties.tmpl"
 dest = "/etc/extendedmind/neo4j.properties"
 keys = [
     "/extendedmind/ha",
-    "/extendedmind/servers"
+    "/extendedmind/backend/hosts"
 ]
