Added longer bind/unbind timeouts to prevent error on reboot

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -72,6 +72,9 @@ akka {
 spray.can.server {
   idle-timeout = 60 s
   request-timeout = 20 s
+  bind-timeout = 5 s
+  unbind-timeout = 5 s
+  registration-timeout = 5 s
 }
 
 spray.routing {
