--- a/frontend/core/src/main/docker/nginx.extendedmind.conf
+++ b/frontend/core/src/main/docker/nginx.extendedmind.conf
@@ -19,7 +19,7 @@ server {
   index index.html;
 
   location / {
-    rewrite ^/(?!static|api|collect|evaluate|analytics|terms.html|privacy.html) /index.html break;
+    rewrite ^/(?!static|api|collect|evaluate|analytics) /index.html break;
   }
 
   location /api {
