--- a/frontend/site/docker/nginx.extendedmind.conf
+++ b/frontend/site/docker/nginx.extendedmind.conf
@@ -1,27 +1,20 @@
-server {
-  listen 591;
-  gzip on;
-  root /var/www/landing;
-  index index.html;
-  server_name localhost;
-
-  set $landingindex /index.html;
-  if ($http_user_agent ~* '(iPhone|iPod|iPad|Android)') {
-    set $landingindex /download.html;
-  }
-  rewrite ^/index.html $landingindex break;
-}
 
 server {
   listen 8008;
   server_name localhost;
-  root /var/www/core;
-  index index.html;
 
-  location / {
-    rewrite ^/(?!static|api|collect|evaluate|analytics) /index.html break;
+  # 1. app paths, and rewrite them to index.html
+  location ~* ^/(my|entry|login|collective|new|unsupported|verify|reset|accept|invalid|admin) {
+    root /var/www/extendedmind;
+    rewrite * /index.html break;
   }
 
+  # 2. static files and analytics paths
+  location ~* ^/(static|analytics) {
+    root /var/www/extendedmind;
+  }
+
+  # 3. API to backend
   location /api {
     if ($request_uri ~ /api/shutdown.*) {
       return 403;
@@ -37,6 +30,7 @@ server {
     proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
   }
 
+  # 4. analytics collect
   location /collect {
     rewrite /collect(.*) $1 break;
     proxy_pass http://COLLECT_IP:1080;
@@ -46,11 +40,29 @@ server {
     proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
   }
 
+  # 5. analytics evaluate
   location /evaluate/ {
     auth_basic "Restricted";
     auth_basic_user_file /etc/nginx/credentials/evaluate.htpasswd;
     rewrite /evaluate(.*) $1 break;
     proxy_pass http://EVALUATE_IP:1081;
+    proxy_redirect     off;
+    proxy_set_header   Host             $host;
+    proxy_set_header   X-Real-IP        $remote_addr;
+    proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+  }
+
+  # 6. every other URL is handled by the site module
+  location / {
+    # temporary rewrite to download url for iDevices and Android
+    set $landingindex /;
+    if ($http_user_agent ~* '(iPhone|iPod|iPad|Android)') {
+      set $landingindex /download;
+    }
+    rewrite ^/ $landingindex break;
+
+    # send all the rest to the site component
+    proxy_pass http://localhost:3000;
     proxy_redirect     off;
     proxy_set_header   Host             $host;
     proxy_set_header   X-Real-IP        $remote_addr;
