--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -45,18 +45,17 @@ extendedmind {
       apiKey = "TEST KEY"
     }
     from = "extended mind <support@ext.md>"
-    # URL for non-secure and secure pages
-    urlPrefix = "http://localhost/landing/"
-    secureUrlPrefix = "http://localhost/"
+    # url origin, given without trailing slash
+    urlOrigin = "http://localhost"
     templates {
       # Set this to use custom emails 
       # directory = "custom_email_template_directory"
       shareListTitle = "inviterEmail shared a list with you"
-      acceptShareURI = "accept/shareValue?email=emailValue"
+      acceptShareURI = "/accept/shareValue?email=emailValue"
       resetPasswordTitle = "password reset instructions"
-      resetPasswordURI = "reset/resetCodeValue?email=emailValue"
+      resetPasswordURI = "/reset/resetCodeValue?email=emailValue"
       verifyEmailTitle = "verify your email address"
-      verifyEmailURI = "verify/verifyCodeValue?email=emailValue"
+      verifyEmailURI = "/verify/verifyCodeValue?email=emailValue"
     }
   }
 }
