--- a/frontend/site/docker/nginx.extendedmind.conf
+++ b/frontend/site/docker/nginx.extendedmind.conf
@@ -6,7 +6,7 @@ server {
   # 1. app paths, and rewrite them to index.html
   location ~* ^/(my|entry|login|collective|new|unsupported|verify|reset|accept|invalid|admin) {
     root /var/www/extendedmind;
-    rewrite * /index.html break;
+    rewrite ~* /index.html break;
   }
 
   # 2. static files and analytics paths
@@ -33,6 +33,8 @@ server {
   # 4. analytics collect
   location /collect {
     rewrite /collect(.*) $1 break;
+
+
     proxy_pass http://COLLECT_IP:1080;
     proxy_redirect     off;
     proxy_set_header   Host             $host;
@@ -54,15 +56,19 @@ server {
 
   # 6. every other URL is handled by the site module
   location / {
-    # temporary rewrite to download url for iDevices and Android
-    set $landingindex /;
-    if ($http_user_agent ~* '(iPhone|iPod|iPad|Android)') {
-      set $landingindex /download;
+    # temporary hack to rewrite root to download url for iDevices and Android
+    if ($request_uri = /) {
+      set $test root;
     }
-    rewrite ^/ $landingindex break;
+    if ($http_user_agent ~* '(iPhone|iPod|iPad|Android)') {
+      set $test "${test}+mobile";
+    }
+    if ($test = root+mobile) {
+      rewrite ^ /download break;
+    }
 
     # send all the rest to the site component
-    proxy_pass http://localhost:3000;
+    proxy_pass http://SITE_IP:3000;
     proxy_redirect     off;
     proxy_set_header   Host             $host;
     proxy_set_header   X-Real-IP        $remote_addr;
