--- a/e2e/pom.xml
+++ b/e2e/pom.xml
@@ -27,6 +27,13 @@
     <url>git@github.com:extendedmind/extendedmind.git</url>
   </scm>
 
+  <properties>
+    <e2e.urlOrigin>http://localhost:8008</e2e.urlOrigin>
+    <e2e.mailgunDomain>extendedmind.org</e2e.mailgunDomain>
+    <e2e.mailgunKey>TEST KEY</e2e.mailgunKey>
+    <e2e.emailFrom>extended mind &lt;info@extendedmind.org&gt;</e2e.emailFrom>
+  </properties>
+
   <developers>
     <developer>
       <id>ttiurani</id>
@@ -194,10 +201,10 @@
                 <env>
                   <EXTENDEDMIND_BACKEND_TOKENSECRET>01234567890123456789012345678901</EXTENDEDMIND_BACKEND_TOKENSECRET>
                   <EXTENDEDMIND_BACKEND_SIGNUPMODE>BETA</EXTENDEDMIND_BACKEND_SIGNUPMODE>
-                  <EXTENDEDMIND_BACKEND_MAILGUNKEY>TEST KEY</EXTENDEDMIND_BACKEND_MAILGUNKEY>
-                  <EXTENDEDMIND_BACKEND_MAILGUNDOMAIN>ext.md</EXTENDEDMIND_BACKEND_MAILGUNDOMAIN>
-                  <EXTENDEDMIND_EMAILFROM>extended mind &lt;support@ext.md&gt;</EXTENDEDMIND_EMAILFROM>
-                  <EXTENDEDMIND_URLORIGIN>http://localhost:8008</EXTENDEDMIND_URLORIGIN>
+                  <EXTENDEDMIND_URLORIGIN>${e2e.urlOrigin}</EXTENDEDMIND_URLORIGIN>
+                  <EXTENDEDMIND_BACKEND_MAILGUNDOMAIN>${e2e.mailgunDomain}</EXTENDEDMIND_BACKEND_MAILGUNDOMAIN>
+                  <EXTENDEDMIND_BACKEND_MAILGUNKEY>${e2e.mailgunKey}</EXTENDEDMIND_BACKEND_MAILGUNKEY>
+                  <EXTENDEDMIND_EMAILFROM>${e2e.emailFrom}</EXTENDEDMIND_EMAILFROM>
                   <!-- test login admin:adminpwd for /evaluate -->
                   <EXTENDEDMIND_EVALUATECREDENTIALS>admin:$apr1$iRuCzNe7$wGTyTAez42hHC9rGP6CHg.</EXTENDEDMIND_EVALUATECREDENTIALS>
                   <EXTENDEDMIND_SITE_BACKENDURLPREFIX>http://localhost:8081/api/11111111-1111-1111-1111-111111111111</EXTENDEDMIND_SITE_BACKENDURLPREFIX>
