Added possibility to add a second port to nginx

--- a/frontend/site/pom.xml
+++ b/frontend/site/pom.xml
@@ -176,6 +176,7 @@
                 </tags>
                 <ports>
                   <port>8008</port>
+                  <port>8009</port>
                 </ports>
                 <assembly>
                   <mode>dir</mode>
