--- a/frontend/site/src/package.json
+++ b/frontend/site/src/package.json
@@ -5,12 +5,12 @@
   "private": true,
   "main": "server.js",
   "dependencies": {
-    "co-views": "^1.0.0",
     "koa": "^0.21.0",
     "koa-logger": "^1.3.0",
+    "koa-nunjucks-2": "^1.0.3",
     "koa-route": "^2.4.2",
     "koa-static-folder": "^0.1.5",
-    "nunjucks": "^1.3.4"
+    "path": "^0.11.14"
   },
   "devDependencies": {},
   "scripts": {
