--- a/pom.xml
+++ b/pom.xml
@@ -320,7 +320,7 @@
         <plugin>
           <groupId>org.jolokia</groupId>
           <artifactId>docker-maven-plugin</artifactId>
-          <version>0.13.0</version>
+          <version>0.13.3-EM</version>
         </plugin>
       </plugins>
     </pluginManagement>
