Added possibility to sync folders, and also added /files path to ext.md for showing files

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -417,8 +417,8 @@
               </build>
             </image>
             <image>
-              <name>extendedmind/mongodb-backup</name>
-              <alias>mongodb-backup</alias>
+              <name>extendedmind/sync-folder</name>
+              <alias>sync-folder</alias>
               <build>
                 <from>extendedmind/cloud-sdk</from>
                 <maintainer>timo.tiuraniemi@iki.fi</maintainer>
@@ -428,11 +428,11 @@
                 <assembly>
                   <mode>dir</mode>
                   <basedir>/usr/src/extendedmind</basedir>
-                  <descriptor>mongodb-backup-assembly.xml</descriptor>
+                  <descriptor>sync-folder-assembly.xml</descriptor>
                 </assembly>
                 <entryPoint>
                   <exec>
-                    <arg>/usr/src/extendedmind/run-mongodb-backup.pl</arg>
+                    <arg>/usr/src/extendedmind/run-sync-folder.pl</arg>
                   </exec>
                 </entryPoint>
               </build>
