--- a/frontend/site/docker/nginx.extendedmind.conf
+++ b/frontend/site/docker/nginx.extendedmind.conf
@@ -9,8 +9,8 @@ server {
     rewrite ~* /index.html break;
   }
 
-  # 2. static files and analytics paths
-  location ~* ^/(static|analytics) {
+  # 2. static assets, synced files and analytics paths
+  location ~* ^/(static|files|analytics) {
     root /var/www/extendedmind;
   }
 
