--- a/e2e/pom.xml
+++ b/e2e/pom.xml
@@ -174,6 +174,7 @@
         <groupId>org.jolokia</groupId>
         <artifactId>docker-maven-plugin</artifactId>
         <configuration>
+          <verbose>true</verbose>
           <images>
             <image>
               <name>extendedmind/mongodb-conf</name>
@@ -379,6 +380,20 @@
                 <links>
                   <link>mongodb:mongodb</link>
                 </links>
+              </run>
+            </image>
+            <image>
+              <name>extendedmind/sync-folder</name>
+              <alias>sync-folder</alias>
+              <run>
+                <namingStrategy>alias</namingStrategy>
+                <volumes>
+                  <from>
+                    <image>frontend-data</image>
+                  </from>
+                </volumes>
+                <!-- Only testing purposes, try to mirror a random directory that has sub directories to the files path -->
+                <cmd>/var/www/extendedmind/analytics/bootstrap/ /var/www/extendedmind/files</cmd>
               </run>
             </image>
           </images>
