Added latest symbolic links and rewriting /files/osx/latest and /files/windows/latest to installer files

--- a/frontend/site/docker/nginx.extendedmind.conf
+++ b/frontend/site/docker/nginx.extendedmind.conf
@@ -12,6 +12,13 @@ server {
   # 2. static assets, synced files and analytics paths
   location ~* ^/(static|files|analytics) {
     root /var/www/extendedmind;
+
+    if ($request_filename ~ "^.*/osx/latest$"){
+      add_header Content-Disposition 'attachment; filename="extended-mind-latest.dmg"';
+    }
+    if ($request_filename ~ "^.*/windows/latest$"){
+      add_header Content-Disposition 'attachment; filename="extended-mind-latest.exe"';
+    }
   }
 
   # 3. API to backend
