--- a/frontend/site/pom.xml
+++ b/frontend/site/pom.xml
@@ -206,8 +206,8 @@
               </build>
             </image>
             <image>
-              <name>extendedmind/frontend</name>
-              <alias>frontend</alias>
+              <name>extendedmind/site-static</name>
+              <alias>site-static</alias>
               <build>
                 <from>ubuntu:14.04</from>
                 <maintainer>timo.tiuraniemi@iki.fi</maintainer>
@@ -218,7 +218,7 @@
                 <assembly>
                   <mode>dir</mode>
                   <basedir>/usr/src/extendedmind</basedir>
-                  <descriptor>frontend-assembly.xml</descriptor>
+                  <descriptor>site-static-assembly.xml</descriptor>
                 </assembly>
                 <cmd><shell>cp -R /usr/src/extendedmind/* /var/www</shell></cmd>
               </build>
